--- a/Lab_1/Lab_1.5.html
+++ b/Lab_1/Lab_1.5.html
@@ -19,8 +19,8 @@
         Shubham Jadhav
         Industrial Area,Thane-Belapur Road,
         Airoli, Navi Mumbai, Maharashtra - 400708
-        Mobile no: 7773911639.
-        Email : shubham.e.jadhav@capgemini.com
+        Mobile no: 1234567890.
+        Email : abc.com
         <hr>
         </pre>
         <h1 style="color: black; size: 150%; font-family: 'Courier New', Courier, monospace; font-size: 150%;">
@@ -35,7 +35,7 @@
         Language : JavaScript ,Java , HTML , CSS , Bootstrap , Angular.
         Frontend : VB 6.0.
         DBMS : Oracle 20.2 version.
-        shubham jadhav
+        
        
     </pre>
     </div>
